# latino-Core

./: .gitignore  .gitmodules  ANALISIS_PROYECTO_COMPLETO.md  CMakeLists.txt  LICENSE  NSIS_registry.nsh  NSIS_uninstall.nsh  README.md  WARNINGS_COMPILACION.md  crear_instaladores.md  prueba.lat  walkthrough.md
.github/workflows/: release.yml
cmake/: CPackOptions.cmake.in
cmake/Modules/: GetLatVersion.cmake  ResourceUpdate.cmake
include/: latast.h  latclass.h  latcompat.h  latdic.h  latdo.h  latino.h  latlex.h  latmv.h  latobj.h  latparse.h
src/: CMakeLists.txt  latast.c  latbaselib.c  latclass.c  latdevlib.c  latdic.c  latdiclib.c  latdo.c  latfilelib.c  latgc.c  latino.c  latino.def  latino_os_version.manifest  latlex.c  latlex.h  latlist.c  latlistlib.c  latlocale.c  latmathlib.c  latmv.c  latobj.c  latpaqlib.c  latparse.c  latparse.h  latstrlib.c  latsyslib.c  latuilib.c
src/gnu-utilities/: latino.nanorc
src/linenoise/: CMakeLists.txt  linenoise.c
src/vs_resources/: latino.aps  latino.rc  resource.h
tools/parser/: latlex.c  latlex.h  latlex.l  latparse.c  latparse.h  latparse.output  latparse.y
